# em_fastapi_curso

./: README.md
fast_zero/: pyproject.toml
fast_zero/fast_zero/: app.py  schemas.py
fast_zero/tests/: conftest.py  test_app.py
